# SandboxSimulator2014

./: .gitignore  CMakeLists.txt  README.md  SS Todo.txt  main.cpp  sky shader settings.txt
Dependencies/AngelScript/: as_config.h  as_restore.cpp  as_scriptobject.cpp  scriptstdstring.cpp
Dependencies/Assimp/: ACLoader.h  ASEParser.h  AssimpPCH.h  BVHLoader.cpp  BlenderDNA.inl  COBLoader.cpp  DefaultIOSystem.h  FileSystemFilter.h  GenVertexNormalsProcess.h  IRRLoader.cpp  MD2Loader.h  MD3FileData.h  MD5Loader.cpp  MDCFileData.h  MDLFileData.h  MaterialSystem.cpp  OFFLoader.h  ObjFileParser.cpp  OgreImporter.cpp  OptimizeMeshes.cpp  Q3BSPFileImporter.cpp  Q3DLoader.cpp  RemoveVCProcess.h  SceneCombiner.cpp  SkeletonMeshBuilder.cpp  SkeletonMeshBuilder.h  SpatialSort.cpp  SplitLargeMeshes.h  UnrealLoader.cpp  ValidateDataStructure.h  XFileHelper.h
Dependencies/Assimp/irrXML/: irrXML.cpp
Dependencies/Assimp/unzip/: ioapi.c
Dependencies/Assimp/zlib/: crc32.c
Dependencies/Bullet/: btBulletDynamicsCommon.h
Dependencies/Bullet/Bullet3Common/: b3Vector3.cpp
Dependencies/Bullet/Bullet3Dynamics/: b3CpuRigidBodyPipeline.cpp  b3CpuRigidBodyPipeline.h
Dependencies/Bullet/Bullet3Geometry/: b3AabbUtil.h  b3ConvexHullComputer.cpp  b3ConvexHullComputer.h  b3GeometryUtil.h  b3GrahamScan2dConvexHull.h
Dependencies/Bullet/BulletSoftBody/: btSoftBody.cpp  btSoftBodyConcaveCollisionAlgorithm.cpp  btSoftBodyHelpers.cpp  btSoftSoftCollisionAlgorithm.h
Dependencies/Bullet/LinearMath/: btCpuFeatureUtility.h  btMatrixX.h
Dependencies/FreeImage/: Utilities.h
Dependencies/FreeImage/FreeImage/: BitmapAccess.cpp  ConversionFloat.cpp  ConversionRGBF.cpp  ConversionType.cpp  PSDParser.cpp  Plugin.cpp  PluginDDS.cpp  PluginPICT.cpp  PluginPNG.cpp  PluginRAW.cpp  PluginWBMP.cpp  ZLibInterface.cpp
Dependencies/FreeImage/FreeImageToolkit/: Channels.cpp  ClassicRotate.cpp  Rescale.cpp  Resize.cpp
Dependencies/FreeImage/LibOpenJPEG/: j2k.h
Dependencies/FreeImage/Metadata/: FIRational.cpp  TagLib.cpp
Dependencies/GLFW/: cocoa_init.m  cocoa_monitor.m  cocoa_platform.h  context.c  glfw3.h  glfw_config.h  glx_platform.h  internal.h  nsgl_platform.h
Dependencies/Gamepad/: Gamepad.h  GamepadPrivate.c  GamepadPrivate.h  OSXGamepad.c
Dependencies/Spline/: Spline.cpp  Spline.h
Engine/: AnimationSystem.cpp  AnimationSystem.h  AssetManager.cpp  AssetManager.h  CullingAlgorithm.cpp  CullingAlgorithm.h  Engine.cpp  Engine.h  EngineConfig.h  EngineMacros.h  EngineMath.cpp  EngineMath.h  EngineSystem.cpp  EngineSystem.h  EngineTasks.cpp  EngineTasks.h  EngineTypes.h  EntityManager.cpp  EntityManager.h  Event.cpp  Event.h  FileManager.cpp  FileManager.h  GUIManager.cpp  GUIManager.h  Hashmap.hpp  InputManager.cpp  InputManager.h  Lights.cpp  Lights.h  Log.cpp  Log.h  Mesh.cpp  Mesh.h  Message.cpp  Message.h  PhysicsSystem.cpp  PhysicsSystem.h  PropertyList.cpp  PropertyList.h  (+20 more)
LD32/: CMakeLists.txt  cmake_install.cmake
LD32/SandboxSimulator.build/Debug/LudumDare32.build/: dgph
LD32/SandboxSimulator.build/Debug/LudumDare32.build/Objects-normal/x86_64/: LudumDare32.LinkFileList
LD32/src/: GameState.cpp  GameState.h  HelloWorld.cpp  HelloWorld.h  MenuState.cpp  MenuState.h  main.cpp
LD32/src/Entities/: ArtilleryEntity.cpp  ArtilleryEntity.h  EnemyEntity.cpp  EnemyEntity.h  Player.cpp  Player.h
SSEngine/: CMakeLists.txt  cmake_install.cmake
SSEngine/SandboxSimulator.build/Debug/SSEngine.build/: dgph
SSEngine/SandboxSimulator.build/Debug/SSEngine.build/Objects-normal/x86_64/: SSEngine.LinkFileList
SSEngine/src/: Engine.cpp  Engine.h
SSEngine/src/Core/: Command.h  EngineSystem.cpp  EngineSystem.h  Message.cpp  Message.h  PhysicsSystem.cpp  PhysicsSystem.h  SceneGraph.cpp  SceneGraph.h  StateSystem.cpp  StateSystem.h  Timer.cpp  Timer.h  TransformComponent.cpp  TransformComponent.h
SSEngine/src/Network/: Serialization.h  Socket.cpp  Socket.h
SSEngine/src/Rendering/: CameraComponent.cpp  CameraComponent.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderAlgorithm.cpp  RenderAlgorithm.h  RenderSystem.cpp  RenderSystem.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
SSEngine/src/Rendering/Gui/: Font.cpp  Font.h  Gui.cpp  Gui.h
SSEngine/src/Sound/: SoundEffect.cpp  SoundEffect.h
SSEngine/src/System/: DebugSingleton.h  File.cpp  File.h  InputManager.cpp  InputManager.h  InputSystem.cpp  InputSystem.h  PlatformIncludes.h  SSThread.cpp  SSThread.h  SSTypes.h
SSEngine/src/System/OS/: GlfwBackend.cpp  GlfwBackend.h  PlatformIncludes.h  Window.cpp  Window.h  X11Backend.cpp  X11Backend.h
SSEngine/src/System/StateManagement/: GameApp.cpp  GameApp.h  State.h  StateManager.cpp  StateManager.h
SSEngine/src/Utils/: AABoundingBox.h  ConfigSet.h  Math.h  Octree.h  SSString.cpp  SSString.h  SSVector.h  winpthreads.h
SSEngine/src/Utils/Math/: Functions.cpp  Functions.h  Mat3.h  Mat4.h  Quat.h  Vec2.h  Vec3.h  Vec4.h
SandboxServer/: CMakeLists.txt
SandboxServer/src/: Client.cpp  Client.h  ClientThread.cpp  ClientThread.h  ServerListener.cpp  ServerListener.h  ServerSystem.cpp  ServerSystem.h  main.cpp
SandboxSimulator/: CMakeLists.txt
SandboxSimulator/src/: ConnectionSystem.cpp  ConnectionSystem.h  GameState.cpp  GameState.h  MainState.cpp  MainState.h  main.cpp
SandboxSimulator/src/Client/: ConnectionSystem.cpp  ConnectionSystem.h  GameState.cpp  GameState.h
SandboxSimulator/src/Common/: GameCommands.h  NetworkDefs.h
SandboxSimulator/src/Server/: Client.cpp  Client.h  ServerListener.cpp  ServerListener.h  ServerSystem.cpp  ServerSystem.h  SrvPhysicsSystem.h
TestGame/: CMakeLists.txt
TestGame/src/: TestState.cpp  TestState.h  main.cpp
cmake-extras/: FindGL.cmake  FindSFML.cmake
dependencies/: CMakeLists.txt
dependencies/Assimp/: CMakeLists.txt
dependencies/Assimp/code/: AssimpPCH.cpp  CMakeLists.txt
dependencies/Assimp/include/: 3DSHelper.h  3DSLoader.h  ASELoader.h  B3DImporter.h  BaseImporter.h  BaseProcess.h  ByteSwap.h  COBScene.h  CXMLReaderImpl.h  (+47 more)
dependencies/bullet/: CMakeLists.txt
lib/: SandboxSimulator.exp
lib/Debug/: SandboxSimulator.exp
(+179 files in other folders)
